--- a/IoT_AutonomousFarm/microservices/HumidityManagement_config.json
+++ b/IoT_AutonomousFarm/microservices/HumidityManagement_config.json
@@ -1,5 +1,6 @@
 {
     "catalog_url": "http://localhost:8080",
+    "dataAnalysis_url": "http://localhost:8081",
     "device_id": "1",
     "mqtt_connection": {
         "mqtt_port": 1883,
