--- a/IoT_AutonomousFarm/thingSpeakAdaptor/ThingSpeakAdaptor_config.json
+++ b/IoT_AutonomousFarm/thingSpeakAdaptor/ThingSpeakAdaptor_config.json
@@ -5,5 +5,6 @@
         "mqtt_port": 1883,
         "keep_alive": 120,
         "mqtt_broker": "mqtt.eclipseprojects.io"
-    }
+    },
+    "url": "https://api.thingspeak.com/update"
 }
