--- a/IoT_AutonomousFarm/thingSpeakAdaptor/ThingSpeakAdaptor_config.json
+++ b/IoT_AutonomousFarm/thingSpeakAdaptor/ThingSpeakAdaptor_config.json
@@ -6,5 +6,6 @@
         "keep_alive": 120,
         "mqtt_broker": "mqtt.eclipseprojects.io"
     },
-    "url": "https://api.thingspeak.com/update"
+    "write_url": "https://api.thingspeak.com/update",
+    "read_url": "https://api.thingspeak.com/channels"
 }
