--- a/IoT_AutonomousFarm/microservices/NutrientManagement_config.json
+++ b/IoT_AutonomousFarm/microservices/NutrientManagement_config.json
@@ -1,7 +1,7 @@
 {
     "catalog_url": "http://localhost:8080",
     "dataAnalysis_url": "http://localhost:8081",
-    "device_id": "3",
+    "greenhouse_id": 13,
     "mqtt_connection": {
         "mqtt_port": 1883,
         "keep_alive": 180,
