--- a/IoT_AutonomousFarm/microservices/DataAnalysis_config.json
+++ b/IoT_AutonomousFarm/microservices/DataAnalysis_config.json
@@ -1,7 +1,7 @@
 {
     "catalog_url": "http://localhost:8080",
     "thingSpeak_url": "http://localhost:8082",
-    "device_id": "4",
+    "greenhouse_id": 13,
     "mqtt_connection": {
         "mqtt_port": 1883,
         "keep_alive": 120,
