--- a/IoT_AutonomousFarm/deviceConnector/DeviceConnector_config.json
+++ b/IoT_AutonomousFarm/deviceConnector/DeviceConnector_config.json
@@ -4,6 +4,6 @@
     "mqtt_connection": {
         "mqtt_port": 1883,
         "keep_alive": 180,
-        "mqtt_broker": "mqtt.eclipseprojects.io"
+        "mqtt_broker": "broker.hivemq.com"
     }
 }
