--- a/IoT_AutonomousFarm/ui/telegramBot/TelegramBot_config.json
+++ b/IoT_AutonomousFarm/ui/telegramBot/TelegramBot_config.json
@@ -3,7 +3,7 @@
     "mqtt_connection": {
         "mqtt_port": 1883,
         "keep_alive": 180,
-        "mqtt_broker": "mqtt.eclipseprojects.io"
+        "mqtt_broker": "broker.hivemq.com"
     },
     "telegram_token": "7794925862:AAEeWdf4lWJeLpexbiMXqeBVVDRXYDEzIu4"
 }
