--- a/IoT_AutonomousFarm/microservices/HumidityManagement/Dockerfile
+++ b/IoT_AutonomousFarm/microservices/HumidityManagement/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "HumidityManagament.py"]
+CMD ["python", "HumidityManagement.py"]
