--- a/IoT_AutonomousFarm/microservices/TimeShift/TimeShift_config.json
+++ b/IoT_AutonomousFarm/microservices/TimeShift/TimeShift_config.json
@@ -1,5 +1,5 @@
 {
-    "catalog_url": "http://catalog:8080",
+    "catalog_url": "http://192.168.0.76:8080",
     "dataAnalysis_url": "http://dataanalysis:8081",
     "greenhouse_id": 28,
     "mqtt_connection": {
